update the CORS config